# asare

./: .env  .gitignore  Cargo.toml  README.md  backend-example.conf  backend-example.toml  backend.conf  build.sbt  index.html
app/: api.http  asare-bot.service
asare-backend/: .gitignore  Cargo.toml  README.md  build.sbt
asare-backend/app/: api.http  asare-backend.service  asare.service
asare-backend/backend/: Cargo.toml  README.md
asare-backend/backend/src/: app.rs  controllers.rs  entities.rs  lib.rs  main.rs  portfolio.rs  portfolios.rs  presenters.rs  rebalancer.rs  routes.rs  users.rs  utils.rs
asare-backend/backend/src/entities/: portfolios.rs  users.rs
asare-backend/backend/src/portfolio/: repository.rs  routes.rs  service.rs
asare-backend/backend/src/users/: apikey.rs  (+9 more)
asare-backend/domain/: Cargo.toml
asare-backend/domain/src/: lib.rs  price_provider.rs  utils.rs
asare-backend/project/: Dependencies.scala  plugins.sbt
asare-backend/telegram-bot/: README.md
asare-backend/telegram_bot/: Cargo.toml
asare-backend/telegram_bot/src/: conversions.rs  main.rs  resources.rs  states.rs
asare-frontend/: .scalafmt.conf  README.md  index.html
asare-rust-impl/: Cargo.toml
asare-rust-impl/backend/: Cargo.toml
asare-rust-impl/backend/src/: conf.rs  config.rs  lib.rs  main.rs  routes.rs
asare-telegram-bot/: README.md  build.sbt
asare-telegram-bot/app/: api.http
backend/: Cargo.toml  build.rs
backend/migrations/: 20220904110440_users_table.up.sql  20220905164610_portfolios_table.down.sql  20220905164610_portfolios_table.up.sql  20221125153510_edit_users_table.down.sql  20221125153510_edit_users_table.up.sql
backend/src/: app.rs  conf.rs  main.rs  portfolios.rs  presenters.rs  users.rs  utils.rs
backend/src/portfolios/: repository.rs  repository_in_memory.rs  repository_pickle.rs  repository_postgres.rs  routes.rs  service.rs
backend/src/rebalancer/: routes.rs
backend/src/users/: api_key_matcher.rs  controller.rs  repository.rs  repository_builder.rs  repository_in_memory.rs  repository_pickle.rs  repository_postgres.rs  routes.rs  service.rs  user_service.rs  users_service.rs
domain/: Cargo.toml
domain/src/: lib.rs  price_provider.rs  rebalancer.rs  users.rs
domain/src/price_provider/: api_provider.rs  finance_api.rs  finance_api_builder.rs  finance_api_mock.rs  finance_api_random.rs  price_provider.rs  price_provider_builder.rs  price_provider_impl.rs  price_provider_trait.rs  repository.rs  repository_builder.rs  repository_in_memory.rs
domain/src/rebalancer/: controller.rs  service.rs  service_builder.rs  service_impl.rs
load-test/: README.md  build.sbt
load-test/load-test/: README.md
project/: plugins.sbt
telegram_bot/: Cargo.toml
telegram_bot/src/: api_client.rs  api_key_mapper.rs  conversions.rs  main.rs  resources.rs  states.rs
telegram_bot/src/api_key_mapper/: mapper.rs  mapper_builder.rs  mapper_json_file.rs  mapper_pickle.rs
telegram_bot/src/states/: main_lupa.rs  rebalance.rs
(+107 files in other folders)
