[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

tokio = { version = "1.20.1", features = ["full"] }

# logging
log = "0.4"
env_logger = "0.9"

# web
axum = "0.5.15"

# json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# config
envy = "0.4.2"
dotenv = "0.15"

approx = "0.5"
clap = "3"
async-trait = "0.1"
passwords = "3"
chrono = "0.4"
pickledb = "0.5"
