[package]
name = "backend"
version = "0.2.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

tokio = { version = "1", features = ["full"] }

# logging
log = "0.4"
env_logger = "0.9"

# web
axum = "0.5"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# db
pickledb = "0.5"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

approx = "0.5"
clap = { version = "3", features = ["cargo"] }
passwords = "3"
chrono = "0.4"
