[package]
name = "backend"
version = "1.0.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }

tokio = { version = "1", features = ["full"] }

# logging
log = "0.4"
env_logger = "0.10"

# web
axum = "0.6"

# json
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# db
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "migrate"] }

# crypto
passwords = "3"
rust-argon2 = "1.0.0"

approx = "0.5"
clap = { version = "4", features = ["cargo"] }
chrono = "0.4"
async-trait = "0.1"
rand = "0.8"
