[package]
name = "telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
teloxide = { version = "0.9.2", features = ["macros", "auto-send"] }
futures = "0.3.5"
log = "0.4"
pretty_env_logger = "0.4.0"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
derive_more = "0.99"
chrono = "0.4.19"
pickledb = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
