[package]
name = "telegram_bot"
version = "1.0.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
futures = "0.3"

# logging
log = "0.4"
pretty_env_logger = "0.4"

derive_more = "0.99"
chrono = "0.4"
pickledb = "0.5"
reqwest = { version = "0.11", features = ["json"] }
